changed the start page and added auto girl and boy status

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <img class="enter-name-image" src="assets/enter-name.png" alt="enter your name image">
             
             <form action="choosePerson.html">
-                <input type="text" name="chatroom" id="room" class="chatroomname">
+                <input type="text" name="chatroom" id="room" class="chatroomname" required>
             </form>
             <img class="flip-over-image" src="assets/flip.png" alt="flip over image">
 
